--- a/roboMakerSettings.json
+++ b/roboMakerSettings.json
@@ -1,63 +1,68 @@
 {
-  "runConfigurations": [{
+  "runConfigurations": [
+    {
       "id": "HelloWorld_Cfg01",
       "name": "HelloWorld Robot",
       "type": "colcon build",
       "cfg": {
-        "workingDir": "./HelloWorld/robot_ws",
+        "workingDir": "/aws-robomaker-sample-application-helloworld/robot_ws",
         "cmdArgs": ""
       }
-    }, {
+    },
+    {
       "id": "HelloWorld_Cfg02",
       "name": "HelloWorld Robot",
       "type": "colcon bundle",
       "cfg": {
-        "workingDir": "./HelloWorld/robot_ws",
+        "workingDir": "/aws-robomaker-sample-application-helloworld/robot_ws",
         "cmdArgs": ""
       }
-    }, {
+    },
+    {
       "id": "HelloWorld_Cfg03",
       "name": "HelloWorld Simulation",
       "type": "colcon build",
       "cfg": {
-        "workingDir": "./HelloWorld/simulation_ws",
+        "workingDir": "/aws-robomaker-sample-application-helloworld/simulation_ws",
         "cmdArgs": ""
       }
-    }, {
+    },
+    {
       "id": "HelloWorld_Cfg04",
       "name": "HelloWorld Simulation",
       "type": "colcon bundle",
       "cfg": {
-        "workingDir": "./HelloWorld/simulation_ws",
+        "workingDir": "/aws-robomaker-sample-application-helloworld/simulation_ws",
         "cmdArgs": ""
       }
-    }, {
+    },
+    {
       "id": "HelloWorld_SimulationJob1",
       "name": "HelloWorld",
       "type": "simulation",
       "cfg": {
         "robotApp": {
-          "name": "RoboMakerHelloWorldRobot",
-          "s3Bucket": "<bucket name for your robot bundle>",
+          "name": "RoboMakerHelloWorldRobot<capitalised name of ROS distribution, e.g. Kinetic>",
           "sourceBundleFile": "./HelloWorld/robot_ws/bundle/output.tar",
+          "s3Bucket": "awsrobomakerhelloworld-161406434552-bundlesbucket-1dtj5uco1xblc",
           "architecture": "X86_64",
-          "robotSoftwareSuite": {
-            "version": "<capitalised name of ROS distribution, e.g. Kinetic>",
-            "name": "ROS"
-          },
           "launchConfig": {
             "packageName": "hello_world_robot",
             "launchFile": "rotate.launch",
             "environmentVariables": {
               "TURTLEBOT3_MODEL": "waffle_pi"
             }
+          },
+          "robotSoftwareSuite": {
+            "name": "ROS",
+            "version": "Melodic"
           }
         },
         "simulationApp": {
-          "name": "RoboMakerHelloWorldSimulation",
-          "s3Bucket": "<bucket name for your simulation bundle>",
+          "name": "RoboMakerHelloWorldSimulation<capitalised name of ROS distribution, e.g. Kinetic>",
           "sourceBundleFile": "./HelloWorld/simulation_ws/bundle/output.tar",
           "architecture": "X86_64",
+          "s3Bucket": "awsrobomakerhelloworld-161406434552-bundlesbucket-1dtj5uco1xblc",
           "launchConfig": {
             "packageName": "hello_world_simulation",
             "launchFile": "empty_world.launch",
@@ -65,24 +70,25 @@
               "TURTLEBOT3_MODEL": "waffle_pi"
             }
           },
-          "robotSoftwareSuite": {
-            "version": "<capitalised name of ROS distribution, e.g. Kinetic>",
-            "name": "ROS"
-          },
           "simulationSoftwareSuite": {
             "name": "Gazebo",
-            "version": "<gazebo version number, e.g. 7>"
+            "version": "9"
           },
           "renderingEngine": {
             "name": "OGRE",
             "version": "1.x"
+          },
+          "robotSoftwareSuite": {
+            "name": "ROS",
+            "version": "Melodic"
           }
         },
         "simulation": {
-          "outputLocation": "<bucket name for your job outputs>",
-          "failureBehavior": "Fail",
           "maxJobDurationInSeconds": 28800,
-          "iamRole": "<your RoboMaker simulation job role ARN>"
+          "failureBehavior": "Fail",
+          "iamRole": "arn:aws:iam::377900838358:role/aws-service-role/robomaker.amazonaws.com/AWSServiceRoleForRoboMaker",
+          "outputLocation": "<bucket name for your job outputs>",
+          "tags": {}
         }
       }
     },
@@ -90,7 +96,12 @@
       "id": "HelloWorld_wf1",
       "type": "workflow",
       "name": "HelloWorld - Build and Bundle All",
-      "runCfgIds": ["HelloWorld_Cfg01", "HelloWorld_Cfg02", "HelloWorld_Cfg03", "HelloWorld_Cfg04"]
+      "runCfgIds": [
+        "HelloWorld_Cfg01",
+        "HelloWorld_Cfg02",
+        "HelloWorld_Cfg03",
+        "HelloWorld_Cfg04"
+      ]
     }
   ]
 }
