--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 version: 0.2 
 env:
   variables:
-    S3_BUCKET: helloworlddemobucket
+    S3_BUCKET: finalhelloworldbucket
     APP_NAME: cicd
     CACHE_DIR: cache
     ROBOT_WS: robot_ws
